src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/invalid/C4A63.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.invalid;

classdiagram C4A63 {
	class A {
		public void m();
	}
	class B {
		public void m(String a);
		public String m2(String a, int b);
	}
}
